--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,3 +8,17 @@
 
   <%= button_to "Destroy this post", @post, method: :delete %>
 </div>
+
+<h4>Comments</h4>
+
+<% if user_signed_in? %>
+  <%= render partial: "comments/form", locals: { comment: Comment.new, commentable: @post } %>
+<% else %>
+  <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "login", new_user_session_path %> to comment
+<% end %>
+
+<%= turbo_stream_from @post, :comments %>
+
+<%= tag.div id: "#{dom_id(@post)}_comments" do %>
+  <%= render partial: "comments/comment_with_replies", collection: @post.comments.where(parent_id: nil), as: :comment %>
+<% end %>
