--- a/app/views/comments/_comment_with_replies.html.erb
+++ b/app/views/comments/_comment_with_replies.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_stream_from comment, :comments %>
 
-<div id="<%= dom_id(comment) %>_with_comments" data-controller="comment-reply">
+<div id="<%= dom_id(comment) %>_with_comments" data-controller="comment-reply" class="pl-3">
   <%= render comment %>
 
   <div>
@@ -9,6 +9,6 @@
 
   <div id="<%= dom_id(comment) %>_comments">
     <%= render partial: "comments/form", locals: { commentable: comment, comment: Comment.new, data: { comment_reply_target: "form" }, class: "d-none" } %>
-    <%= render partial: "comments/comment_with_replies", collection: comment.comments, as: :comment %>
+    <%= render partial: "comments/comment_with_replies", collection: comment.comments, as: :comment, class: '' %>
   </div>
 </div>
