--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: model,
   id: dom_id_for_records(*model),
   data: local_assigns[:data],
-  class: ["my-4"] + Array.wrap(local_assigns[:class]) do |form| %>
+  class: local_assigns[:class] do |form| %>
 
   <% if form.object.errors.any? %>
     <div class="alert alert-danger">
