--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,6 @@
 
 <%= turbo_stream_from @post, :comments %>
 
-<%= tag.div id: "#{dom_id(@post)}_comments" do %>
+<%= tag.div id: "#{dom_id(@post)}_comments", class: 'pt-2' do %>
   <%= render partial: "comments/comment_with_replies", collection: @post.comments.where(parent_id: nil), as: :comment %>
 <% end %>
